# servicetrade-python-sdk

./: .gitignore  LICENSE  PUBLISHING.md  README.md  githubsecrets.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/servicetrade/: __init__.py  client.py  exceptions.py  paginator.py  types.py
tests/: __init__.py  test_client.py  test_paginator.py
