[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "servicetrade"
version = "1.0.0"
description = "Python SDK for the ServiceTrade REST API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "ServiceTrade" },
]
keywords = [
    "servicetrade",
    "api",
    "sdk",
    "rest",
    "client",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "responses>=0.23.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/servicetrade/servicetrade-python-sdk"
Documentation = "https://github.com/servicetrade/servicetrade-python-sdk#readme"
Repository = "https://github.com/servicetrade/servicetrade-python-sdk"
Issues = "https://github.com/servicetrade/servicetrade-python-sdk/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/servicetrade"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
